# locale-tester

./: .gitignore  CHANGELOG.md  README.md  po4a.cfg  pyproject.toml  pyproject.toml.bak
.github/workflows/: build-rpm.yml  release.yml
.tx/: config
build-new/locale-tester_0.2.1_all/DEBIAN/: control
build-new/locale-tester_0.2.2_all/DEBIAN/: control
build-new/locale-tester_0.2.2_all/usr/lib/python3/dist-packages/locale_tester/: main.py
build-new/locale-tester_0.2.2_all/usr/share/applications/: se.danielnylander.LocaleTester.desktop
build-new/locale-tester_0.2.2_all/usr/share/locale/sv/LC_MESSAGES/: locale-tester.mo
data/: se.danielnylander.LocaleTester.desktop  se.danielnylander.LocaleTester.desktop.in
data/man/: locale-tester.1
po/: README.md  locale-tester.pot  sv.mo  sv.po
po/man/: locale-tester.1.pot  sv.po
po/sv/LC_MESSAGES/: locale-tester.mo
src/locale_tester/: __init__.py  __init__.py.bak  __main__.py  main.py
